# dancing_links

./: .gitignore  Cargo.toml  README.md
crates/cmd_common/: Cargo.toml
crates/cmd_common/src/: impls.rs  lib.rs
crates/dancing_links_matrix/: Cargo.toml
crates/dancing_links_matrix/src/: allocator.rs  arena.rs  builders.rs  cells.rs  index.rs  keys.rs  lib.rs  matrix.rs  queue.rs  solver.rs
crates/dancing_links_matrix/src/tests/: builders.rs  cells.rs  matrix.rs  mod.rs  solver.rs  utils.rs
crates/nqueens/: Cargo.toml
crates/nqueens/src/: main.rs
crates/prove/: Cargo.toml
crates/prove/src/: main.rs
crates/sudoku/: Cargo.toml
crates/sudoku/examples/: schema1.txt
crates/sudoku/src/: main.rs
src/: cells.rs  keys.rs  main.rs  matrix.rs
