[workspace]
members = [
    "crates/dancing_links_matrix",
    "crates/sudoku",
    "crates/nqueens",
    "crates/cmd_common",
]
resolver = "2"

[workspace.dependencies]
itertools = "0.13.0"
logging_timer = "1.1.1"
simple_logger = "5.0.0"
log = "0.4.14"
clap = { version = "4.5.8", features = ["derive"] }
bumpalo = "3.16.0"

[profile.profiling]
inherits = "release"
debug = 1
